@@ -1,6 +1,8 @@
-DIST tlp-0.3.6-r1-gentoo.tar.bz2 28314 RMD160 2e7ed42184dd79c2c503abd4e9ad78d7f03c7d3f SHA1 11c4ac6c59798b2fd0c2d8d73483d5776e976b8c SHA256 9996a42701d439474e89b9ef7b1d3714a8d876a1a287f14b23bf0d42efcff88e
-DIST tlp-0.3.6.900-r0-gentoo.tar.bz2 32146 RMD160 7b8bcbb9a933b3c27c9e4abe047422c7e53f1028 SHA1 fd7cdc8ca40716ce2ccf5b9e5ab53e306f4c2679 SHA256 0a94d520fcc708f14cb670018305828611f17c9ac33a6b65fd500f3c8ea56b34
-EBUILD tlp-0.3.6-r1.ebuild 3995 RMD160 9198f5d729453e1872c3a46999b9c0f3c341d31d SHA1 223d534bfe30bd656ee038660b9748d912ef0a6b SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798e97605bbe6942803d12f7d0
-EBUILD tlp-0.3.6.900.ebuild 3953 RMD160 3817ea7c58019a6a46bc560ea66106e9a94ec4a3 SHA1 3edd278c58de2887883741d96e57fb635aed1ab7 SHA256 ffaa2c80ef08fc93d513cf994f3870ebb6f28d35367a4ef73d728e98b26a248e
-MISC ChangeLog 2885 RMD160 0e8103ea43897dcdee696d836d6ac451c3ec0010 SHA1 1e7520d0b6908f0ce7b127044f303ccfdf325a34 SHA256 aaeb09517bc61f1bb27ac80e55c6677888e25344a042d216f7698435de951312
-MISC metadata.xml 1850 RMD160 83d1a8828e12ae7da0200d71453b66d9756d3324 SHA1 ae9b0c6f513456d3d3244461b28818a8fbd9f7c8 SHA256 1a594c0f8c3a0ea267e555ca2998c5c1aac86150cbca0341a29ce677fc45979c
+DIST tlp-0.3.6-r1-gentoo.tar.bz2 28314 SHA256 9996a42701d439474e89b9ef7b1d3714a8d876a1a287f14b23bf0d42efcff88e SHA512 51953d783bc60282673d226394602d61b229b96531f55bad1687ea57b61667a922c71c39be5b85412b09ee95b04170d4804b00ae1a0258c456dbfc4040cc3b52 WHIRLPOOL 34bad9e3553a0a54d9da9557faf8674fbde33282dad42af7db5a54c2dca9076bef1e6662817131718844aaa3e5b4714f6ed99fd743a10b769293853ab2b1449c
+DIST tlp-0.3.6.900-r0-gentoo.tar.bz2 32146 SHA256 0a94d520fcc708f14cb670018305828611f17c9ac33a6b65fd500f3c8ea56b34 SHA512 20a02f1619d3e95c3f7ca387ce2c7f26abd970d753b6059007932f600a57d74896144046b8de4fab55ef79ad5db1b379b8b40bbc5af88e83f79b874e665c519a WHIRLPOOL 07403e3866d3440aaf9778e99d1ebe7f2df197d757a10629f17a023bc3ad180b6c98a9d4d5a86529d2678778a9d3db09e9be2c6296f102b6096d100f9340ef59
+DIST tlp-0.3.7_p1-r0-gentoo.tar.bz2 31264 SHA256 4861f8470b12fe7d706032db6a204a10a69edaf357ffef41f8c29fcd92d86f0f SHA512 8ab6b8c7a1f91ea92fac6aa83b0be007bbad44a963ea18d9c0dcc9bbbcf9dd9d7c12420497b326be6cd4802c728ee8f4ae59bc1b7d09ba63fef38c49bb48ad8e WHIRLPOOL fe9f0645445f660822023b11e19c9cf80e08feebb81fae85c39089a53fcf5f7b152fc168ef23d7f4a9b4c8f7684835200490101d11edc6f19eba7fac3663d6fd
+EBUILD tlp-0.3.6-r1.ebuild 3995 SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798e97605bbe6942803d12f7d0 SHA512 293d3143cbc6bc4a5c113d4fe200e3c86bdb1ff7121becb87567d8d2776ac17b9e47c9e49b0cfc7d041d7fe27451808d168015ebbbc8781c31ab13856eef601e WHIRLPOOL bab7bc2755e2352adb57ab848cff1fbe1acad8bdf4e8daa8537bacff9381bcbc54d54f724f371025a7f05251a73ba1ff6ee88c300dea2626c39e3ceb4f115dd6
+EBUILD tlp-0.3.6.900.ebuild 3942 SHA256 898b40f809a5db48d48694f17eec0e998603bb7298976b3e4a0dad232a8a7cec SHA512 ffdd8ba1d7847c86cb3d60e990210ff85e38d701bce383d794ccd0512247d8d29f65b1313c8a1f4243d125035acc888df18cbab75eb268d421eaa53e65aba88f WHIRLPOOL 2b4c688c27fe272b026b944fbc7d587e560b0f547dc8df619e1bf5c885a0df296f5958cfa9aceb4351c7b1b70d70588941dfba53c7bae06d8617f30be19f6521
+EBUILD tlp-0.3.7_p1.ebuild 4261 SHA256 defc320d26570ba8a09089ee29b5d43eb9d013d21ec515589964665194ac9cd3 SHA512 7dc2519bf6bbb356f97a6c730189631f0de98f73e3fb2d29f5e0327bbe8dd8547ac1c1990401d2518a6b1b4a89cd6ad8c245af364be5b81032481086c6f1a121 WHIRLPOOL 502e8e77786dfb37fc8ea71e753a585f25bcdbe69f4c1a85ddb68f6957294e06650a0b643b1aaa15b11e4d348f7beaaf5bef069c4457a54f4addda3490910ffa
+MISC ChangeLog 3090 SHA256 a7406f0b234a0965c3a227ab7d2015042d96141c64497c2fd01e70f21d772ce7 SHA512 71af8aed65cecd558ad9afffba22e1a72e5d447beb67dc59a064bd6702d53c52bb147c1a1644a9039b3ea84f2b8e57815252b15760c56ed3a2c3973a07f6d646 WHIRLPOOL a0927e696e4d5d4c0c0f1f967f0ad92c91cae62fc6df1f512a40e6c8e4461c29ce7519cbfec3a5f336a9a88ab3fe09370bdf7de5d0936d72eb7cb350171def0f
+MISC metadata.xml 2156 SHA256 64b74cfd8da40de070a8b4ed69601dd55bf51644fa0976ecc3a1837067aec443 SHA512 001a1bc2890641db487ad509d9282203e9d5264eace8213f05e2f77fbd2ccee87cac364e639a1858f683d40ad3656c67f097a77b9cc02a40302f2c82901497ff WHIRLPOOL a84983fbe137f76f60ccf9b1d95df432f4cafd695c764d8f86fb92ec77296f7f77d3e75343d684b3b735aef97249bec5bdb5fe746106a35c93250278e81073e9
