@@ -1,0 +1,4 @@
+DIST tpacpi-bat 9632 SHA256 8b59d45058a4cbaf56ed75a4682934c9439e3f4bd8bfc37cef1dc5ad584392b8 SHA512 02552e34139feb6cd44f2bd30e3b912fb219cf0c49738c8112d3edbf66f9ca713dcf41f25533ddc5a05b548241f8ccc748b4578c7bab12d83daa9ba73a4047a0 WHIRLPOOL 9c20f08b95399add213d78351db209c912a362ab87e894cf346d0a42da4a027ecfe8d1e1047102e0d79cc3159b2e875f359001092c452ba010515e0a79f51897
+EBUILD tpacpi-bat-2011.ebuild 947 SHA256 421cd7d21a03f725f74252ae5e7e4120734f903c8a6f6eb10a605ec5a435bcc5 SHA512 fbde55d1795cf14c7c3e217e5c68c50ae0776daac5285f680ee26d29fb75616b4d079d61547c942e5ff626465e694da4fa5eb905ae870b0ae7a02e0a83907271 WHIRLPOOL 85f1ce7a654931cac36f68f38fc35563f3b765d5b0264c5d97e0ac86bc44ea1347f39dd3ede8ddc382ba67deb338d0362a7038ad5f80e3cbfc9d113b7013c7a0
+MISC ChangeLog 340 SHA256 55d4814e506bf99299cc91c7ef64aeb440a9e1e63f79333f2f5ad8900a10f79c SHA512 ebba8b803526cbd6d8e0ff56a7792f7f2d7dc5b77f2f43d27d8f4105a2f93834b4e8419eac14e2fab4c1944ac1e32bc1b62157c65c9298e9ff4cba65131f1693 WHIRLPOOL 226bb27be407052c2153ad242810e2bd5ac2b7ca74a867bcb6657f382caaef27609170903020e188c11335b59524a55cfb1526d4187a7f853537f5c809b6f441
+MISC metadata.xml 666 SHA256 398ce2c05bcc4fa31cf578694d5c51d45a9dce56762a1267d7fa0af1dd6819b3 SHA512 74caaa8b665d69016c5dda0d994d203e5055589d0f29b498a6b21c61601681b7f8e45bce78066646a62a6c49ab2b0b29d4c04fcd011b1d0e610006cd58c377c6 WHIRLPOOL e51a96a452d3890e179e4b43a4a8788f7cc80b20911940629428cd5b4dc1318de1bff51e76294219d2c7c1278216baa958b30a8eb76d627d90590c00f1f45d76
