@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<!--<herd>no-herd</herd>-->
+	<maintainer>
+		<email>dywi@mailerd.de</email>
+		<name>Andre Erdmann</name>
+	</maintainer>
+	<longdescription>
+		Exposes inhibitCharge, start/stop charge threshold, and force discharge
+		through ACPI as an alternative to SMAPI, which is broken in W520, etc.
+		Makes ACPI calls using the acpi_call kernel module, which is REQUIRED.
+	</longdescription>
+	<use lang="en">
+		<flag name='acpi_call'>recommended dependency on sys-power/acpi_call (else self-mananged acpi_call kernel module)</flag>
+	</use>
+</pkgmetadata>
